redid changes after that fiasco

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -115,6 +115,10 @@ h1 {
     ul {
         display: inline;
     }
+    #Contact ul {
+        display: flex;
+        justify-content: right;
+    }
 } 
 
 footer {
