changed settings for nav

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -120,7 +120,17 @@ h1 {
         display: flex;
         justify-content: right;
     }
-} 
+    nav {
+        display: block;
+    }
+ 
+    nav ul {
+        justify-content: center;
+        flex-wrap: nowrap;
+    }
+
+    }
+ 
 
 footer {
     text-align: center;
