--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -4,50 +4,79 @@
     color: black;
 }
 
-nav {
-    justify-content: right;
+body {
+    margin: 0px 15px;
 }
-ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-}
+nav{
+    display:block;
+    border-bottom: solid black 2px;
 
-li {
-    display: inline-flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    padding: 5px 20px;
-}
+    ul{
+        padding: 15px;
+        text-align: right;
+        h1 {
+            font-size: 2em;
+            text-align: left;
+            padding-bottom: 5px;
+        }
 
-#About {
-    justify-content: right;
-    width: 50%;
-    max-width: 600px;
-}
-
-#About h2 {
-    text-align: right;
-}
-#About p {
-    text-align: left;
-}
-#header img {
-    max-height: 300px;
-    max-width:fit-content;
-
-}
-#header {
-    display: block;
-    width: 50%;
-}
-h1 {
-    display: block;
+        li{
+            padding:15px;
+            display: inline;
+        }
+        a:hover {
+            border-right: solid black 2px;
+            border-bottom: solid black 2px;
+        }
+    }   
 }
 
 #top {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    padding-bottom: 50px;
+
+    #About {
+        display: block;
+        width: 50%;
+        max-width: 600px;
+        min-width: 350px;
+        text-align: left;
+        padding: 5px;
+          
+        h2 {
+            padding: 5px;
+            border-bottom: solid black 2px;
+            border-left: solid black 2px;
+            margin-bottom: 15px;
+        } 
+        
+        p {
+            text-align: left;
+        }
+    }   
+
+    #avatar img{
+        display: block;
+        padding:15px;
+        border: solid black 2px;
+        margin: 5px;
+        max-height: 300px;
+        max-width:fit-content;     
+    }
+ }
+
+ #Applications {
+    h2 {
+        padding: 5px;
+        border-bottom: solid black 2px;
+        border-left: solid black 2px;
+        margin-bottom: 15px;
+    }
+ }
+h1 {
+    display: block;
 }
 
 #prework img{
@@ -88,50 +117,60 @@ h1 {
     justify-content: center;
 }
 @media screen and (max-width: 768px) {
-    * , nav, ul, li, #header {
+    * , #header {
         justify-content: center;
         text-align: center;
     }
-    #top {
-        display:block;
-        margin: auto;
+
+    nav ul{
+        text-align: center;
     }
+
     #header {
         display: block;
         width: 100%;
+        text-align: center;
     }
-    .header {
-        justify-content: center;
-    }
+
     #About {
+        min-width: none;
+        max-width: 350px;
         width: 100%;
         margin: auto;
     }
+
     #About h2{
         text-align: center;
         display: block;
         width: 100%;
     }
+
     #Contact ul {
         display: flex;
         justify-content: right;
     }
+    
     #Contact ul {
         display: flex;
         justify-content: right;
     }
-    nav {
-        display: block;
-    }
- 
-    nav ul {
-        justify-content: center;
-        flex-wrap: nowrap;
-    }
-
-    }
- 
-
-footer {
+    
+    footer {
     text-align: center;
+    }
+}
+
+@media screen and (max-width: 622px) {
+    #top {
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    nav ul {
+        padding: 10px 5px;
+    }
+    .shrink {
+        font-size: .85em;
+    }
 }
