--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -212,7 +212,8 @@ a:hover {
     p {
         width: 100%;
     }
-               
+
+  
 }
 
 
@@ -232,6 +233,6 @@ a:hover {
     }
     #top img {
         width:80vw;
-        height:auto;
+        max-height: fit-content;
     }
 }
