--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -5,6 +5,7 @@
 }
 
 body {
+    background-color: antiquewhite;
     margin: 0px 15px;
 }
 nav {
@@ -28,7 +29,7 @@ nav li{
     display: inline;
 }
 
-a:hover {
+nav a:hover {
     border-right: solid black 2px;
     border-bottom: solid black 2px;
 }
@@ -74,6 +75,9 @@ a:hover {
     margin-bottom: 15px;
 }
 
+.app-link img {
+    display: block;
+}
 
 #first {
     margin: 5px;
@@ -142,13 +146,63 @@ a:hover {
 
 }
 
+#prework::after {
+    content: "Prework Study Guide";
+    position: relative;
+    bottom: 30px;
+    left: 15px;
+    background-color: white;
+    border: solid black 2px;
+}
 
+#mini-p::after {
+    content: "Daniel's Page";
+    position: relative;
+    bottom: 30px;
+    left: 15px;
+    background-color: white;
+    border: solid black 2px;
+}
+    
+#challenge1::after {
+    content: "Horiseon Homepage";
+    position: relative;
+    bottom: 30px;
+    left: 15px;
+    background-color: white;
+    border: solid black 2px;
+}
 
- h4, #Contact li {
+#mini-p2::after {
+    content: "CSS Snippets";
+    position: relative;
+    bottom: 30px;
+    left: 15px;
+    background-color: white;
+    border: solid black 2px;
+}
+
+#Contact {
     text-align: right;
-    padding: 0px;
+    background: white;
+    margin-left: 40vw;
+    border-top: black solid 2px;
+    padding: 3px;
 
 }
+
+#first .app-link:hover img{
+    border: solid red 5px;
+}
+#later .app-link:hover img{
+    border: solid red 5px;
+}
+
+h6  {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
 @media screen and (max-width: 768px) {
     #header {
         display: block;
