--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -1,13 +1,16 @@
+/* This ruleset applies to all elements in HTML*/
 *{
     font-family:Arial, Helvetica, sans-serif;
     text-decoration: none;
     color: black;
 }
-
+/* This ruleset applies to whole page */
 body {
-    background-color: antiquewhite;
+    background-color: white;
     margin: 0px 15px;
 }
+
+/* Following 5 rulesets apply to nested sections of nav */
 nav {
     display:block;
     border-bottom: solid black 2px;
@@ -34,6 +37,7 @@ nav a:hover {
     border-bottom: solid black 2px;
 }
 
+/* The following 5 rulesets apply to the elements nested within the #top section */
 #top {
     display: flex;
     flex-wrap: wrap;
@@ -66,7 +70,7 @@ nav a:hover {
     max-width:fit-content;     
 }
  
-
+/* The following 10 rulesets apply to the elements nested within the #Applications section */
 
 #Applications h2 {
     padding: 5px;
@@ -111,8 +115,6 @@ nav a:hover {
 
 }
 
-        
-
 #later {
     margin: 5px;
     padding: 5px;
@@ -146,6 +148,7 @@ nav a:hover {
 
 }
 
+/* The following 6 pseudoclass and pseudoelement rulesets apply to the #Applications section */
 #prework::after {
     content: "Prework Study Guide";
     position: relative;
@@ -162,8 +165,7 @@ nav a:hover {
     left: 15px;
     background-color: white;
     border: solid black 2px;
-}
-    
+}  
 #challenge1::after {
     content: "Horiseon Homepage";
     position: relative;
@@ -182,20 +184,19 @@ nav a:hover {
     border: solid black 2px;
 }
 
-#Contact {
+#first .app-link:hover img{
+    border: solid red 5px;
+}
+
+#later .app-link:hover img{
+    border: solid red 5px;
+/* These last 2 rulesets apply to the #Contact and footer sections*/
+}#Contact {
     text-align: right;
     background: white;
     margin-left: 40vw;
     border-top: black solid 2px;
     padding: 3px;
-
-}
-
-#first .app-link:hover img{
-    border: solid red 5px;
-}
-#later .app-link:hover img{
-    border: solid red 5px;
 }
 
 h6  {
@@ -203,6 +204,7 @@ h6  {
     margin-bottom: 10px;
 }
 
+/* The following rulesets will apply to the selectors when the screen/window is 768px or less */
 @media screen and (max-width: 768px) {
     #header {
         display: block;
@@ -217,6 +219,7 @@ h6  {
     #About {
         width: 100%;
     }
+
     #About p {
         width: 80vw;
     }
@@ -244,7 +247,7 @@ h6  {
         
     }
 }
-
+/* The following rulesets will apply to the selectors when the screen/window is 622px or less */
 @media screen and (max-width: 622px) {
     nav ul{
         text-align: center;
@@ -254,10 +257,9 @@ h6  {
         justify-content: center;
     }
 
-    .top p {
+    #About p {
         width: 100%;
     }
-
 
     #first{
         justify-content: center;
@@ -266,11 +268,9 @@ h6  {
     p {
         width: 100%;
     }
-
-  
 }
 
-
+/* The following rulesets will apply to the selectors when the screen/window is 400px or less */
 @media screen and (max-width: 400px) {
     nav ul {
         padding: 10px 5px;
@@ -279,12 +279,15 @@ h6  {
     nav li {
         padding: 4.3vw;
     }
+
     #first p, #later p {
         margin: 1vw;
     }
+
     * {
         font-size: 3.5vw;
     }
+    
     #top img {
         width:80vw;
         max-height: fit-content;
